// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout.vue loading renders correctly 1`] = `
<div class="layout">
  <div class="layout__loading">
    <div class="layout__loading__progress"></div>
  </div>
  <div class="layout__header">
    <div class="bh-grid bh-grid--space-between bh-grid--row">
      <router-link-stub to="/" tag="a" event="click" class="bh-grid__item layout__header__logo"><img src="@/assets/imgs/logo-white.svg" alt="Bothub" class="hide-mobile"> <img src="@/assets/imgs/icon-white.svg" alt="Bothub" class="hide-desktop"></router-link-stub>
      <!---->
      <div class="bh-grid__item bh-grid__item--nested">
        <div class="bh-grid bh-grid--row layout__header__options">
          <!---->
          <!---->
          <!---->
          <div class="bh-grid__item">
            <bh-button-stub color="fake-white" transparent="true" type="button" maxcontent="true">some specific text</bh-button-stub>
          </div>
          <div class="bh-grid__item">
            <bh-button-stub primary="true" inverted="true" type="button" maxcontent="true" class="hide-mobile">some specific text</bh-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="layout__content"></div>
  <site-footer-stub></site-footer-stub>
<<<<<<< HEAD
=======
  <new-repository-modal-stub></new-repository-modal-stub>
>>>>>>> c8765bb15c4e812a7c25fc9efd2fa5bff7c276f3
  <beginner-tutorial-stub></beginner-tutorial-stub>
</div>
`;

exports[`Layout.vue renders correctly 1`] = `
<div class="layout">
  <!---->
  <div class="layout__header">
    <div class="bh-grid bh-grid--space-between bh-grid--row">
      <router-link-stub to="/" tag="a" event="click" class="bh-grid__item layout__header__logo"><img src="@/assets/imgs/logo-white.svg" alt="Bothub" class="hide-mobile"> <img src="@/assets/imgs/icon-white.svg" alt="Bothub" class="hide-desktop"></router-link-stub>
      <!---->
      <div class="bh-grid__item bh-grid__item--nested">
        <div class="bh-grid bh-grid--row layout__header__options">
          <!---->
          <!---->
          <!---->
          <div class="bh-grid__item">
            <bh-button-stub color="fake-white" transparent="true" type="button" maxcontent="true">some specific text</bh-button-stub>
          </div>
          <div class="bh-grid__item">
            <bh-button-stub primary="true" inverted="true" type="button" maxcontent="true" class="hide-mobile">some specific text</bh-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="layout__content"></div>
  <site-footer-stub></site-footer-stub>
<<<<<<< HEAD
=======
  <new-repository-modal-stub></new-repository-modal-stub>
>>>>>>> c8765bb15c4e812a7c25fc9efd2fa5bff7c276f3
  <beginner-tutorial-stub></beginner-tutorial-stub>
</div>
`;
